--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -26,6 +26,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "@urql/exchange-auth": "^2.2.0",
     "@urql/next": "^1.1.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "geist": "^1.3.0",
     "graphql-codegen": "^0.4.0",
     "graphql-tag": "^2.12.6",
@@ -47,7 +48,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
