--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -19,6 +19,8 @@
     "@graphql-codegen/typescript-resolvers": "^4.3.0",
     "@graphql-codegen/urql-introspection": "^3.0.0",
     "@parcel/watcher": "^2.4.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -26,16 +28,21 @@
     "@trpc/server": "^11.0.0-rc.446",
     "@urql/exchange-auth": "^2.2.0",
     "@urql/next": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.2.1",
     "geist": "^1.3.0",
     "graphql-codegen": "^0.4.0",
     "graphql-tag": "^2.12.6",
+    "lucide-react": "^0.452.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
