--- a/nextjs/codegen.yml
+++ b/nextjs/codegen.yml
@@ -12,6 +12,7 @@ generates:
     plugins:
       - typescript
       - typescript-operations
+      - typescript-urql
       - typescript-document-nodes
       - urql-introspection
     config:
