--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -17,6 +17,7 @@
     "@graphql-codegen/typescript": "^4.1.0",
     "@graphql-codegen/typescript-document-nodes": "^4.0.10",
     "@graphql-codegen/typescript-resolvers": "^4.3.0",
+    "@graphql-codegen/typescript-urql": "^4.0.0",
     "@graphql-codegen/urql-introspection": "^3.0.0",
     "@parcel/watcher": "^2.4.1",
     "@radix-ui/react-icons": "^1.3.0",
