feat: Add Services Page and Solutions Pages

--- a/cms/.env.example
+++ b/cms/.env.example
@@ -1,7 +1,23 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+APP_KEYS=T1bxStTLU6PXxYuVnHpfvg==,fUlnh5G5SlY1RSXT6XQb8Q==,0mPq4TXhB592KMfSgCcz8Q==,GPRGy9Mwpf115KbSWpps3w==
+API_TOKEN_SALT=Ybnpw0/S6thDoLGR9OuZLg==
+ADMIN_JWT_SECRET=1GodSkaVDxrhSk7s53gd4w==
+TRANSFER_TOKEN_SALT=V9yaKHtFSCj/ehf4Wqxs1Q==
+
+# Strapi Database
+DATABASE_CLIENT=postgres
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5437
+DATABASE_NAME=qxlab-io
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgrespassword
+DATABASE_SSL=false
+NODE_ENV="development"
+JWT_SECRET="RMgYGqZlmuve48Q9FXw6Eg=="
+
+
+# default env use for hasura console
+HASURA_GRAPHQL_METADATA_DATABASE_URL="postgres://hasura:hasuraPassword@hasuraDB:5432/hasuradb"
+HASURA_GRAPHQL_JWT_SECRET='{"type":"HS256","key":"118bfcb77d9866b0c9b68ad0c81b4086"}'
+HASURA_GRAPHQL_ADMIN_SECRET="myadminsecretkey"
