--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -3,8 +3,10 @@ NODE_ENV="development"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=""
 
-# Hasura / Strapi Apollo GraphQL
-HASURA_GRAPHQL_ADMIN_SECRET=""
-NEXT_PUBLIC_HASURA_GRAPHQL_API=""
+# Strapi for images
 NEXT_PUBLIC_STRAPI_URL=""
 NEXT_PUBLIC_IP=""
+
+# hasura graphql
+NEXT_PUBLIC_HASURA_GRAPHQL_API=""
+HASURA_GRAPHQL_ADMIN_SECRET=""
