--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -22,6 +22,7 @@
     "@parcel/watcher": "^2.4.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -32,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.2.1",
+    "framer-motion": "^11.11.9",
     "geist": "^1.3.0",
     "graphql-codegen": "^0.4.0",
     "graphql-tag": "^2.12.6",
@@ -40,6 +42,7 @@
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
